# cmake_multiple_build_configs_example

./: CMakeLists.txt  README.md
sample_project/: CMakeLists.txt  main.c
sample_project/libadd/: CMakeLists.txt  add.c
sample_project/libsub/: CMakeLists.txt  sub.c
